HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/BitcopyFieldNonBitcopy/Source/Main.uv
//! Rejected foundational-class specimen for a BitcopyType with a non-BitcopyType field.

internal record BitcopyFieldNonBitcopyPayload <: Bitcopy {
    internal value: unique string@Managed
}
